light nav bomber

--- a/src/routes/8-pageSandbox/index.css
+++ b/src/routes/8-pageSandbox/index.css
@@ -25,19 +25,20 @@
     font-weight: 500;
     cursor: pointer;
     transition-property: all;
-    transition-duration: 600ms;
+    transition-duration: 1200ms;
     transition-timing-function: ease;
     opacity: 1;
     /* background-color: rgb(31, 30, 30); */
-    /* transition-delay: 900ms; */
+    transition-delay: 600ms;
     /* transform: rotate(-180deg); */
 }
 
 .nav-trigger.active {
-    opacity: 0.5;
+    opacity: 0.15;
     transition-property: all;
-    transition-duration: 1100ms;
+    transition-duration: 600ms;
     transition-timing-function: ease;
+    transition-delay: 0ms;
     /* transition-duration: 1300ms; */
     /* border: 1px solid rgb(197, 194, 194);
     color: rgb(197, 194, 194); */
@@ -86,17 +87,61 @@
     opacity: 1;
 }
 
+/* .nav-modal-smooth {
+    pointer-events: none;
+    opacity: 0;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: 200;
+    background-color: rgb(255, 255, 255);
+    transition-timing-function: ease;
+    transition-property: opacity;
+    transition-delay:  500ms;
+    transition-duration: 800ms;
+}
+
+.nav-modal-smooth.active {
+    transition-duration: 1300ms;
+    transition-delay: 0ms;
+    opacity: 0;
+} */
+
+.nav-modal-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(222, 221, 223);
+    transition-timing-function: ease;
+    transition-property: opacity;
+    transition-delay: 200ms;
+    transition-duration: 800ms;
+    z-index: 200;
+    opacity: 0.6;
+    pointer-events: none;
+}
+
+.nav-modal-inner.active {
+    transition-delay:  400ms;
+    transition-duration: 1300ms;
+    opacity: 0;
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
+}
+
 .nav-content {
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1000;
-    opacity: 0;
-    background: rgb(241, 241, 243);
+    opacity: 1;
+    background: rgb(255, 255, 255);
     padding: 0;
     width: 100vw;
     height: 100vh;
     overflow: hidden !important;
+    transition-property: all;
     transform: translateX(100vw);
     transition: 800ms;
     transition-timing-function: cubic-bezier(0.33, 0, 0.175, 1);
@@ -141,16 +186,17 @@
     line-height: 0.6em;
     text-transform: uppercase;
     transform: translateX(0em);
-    opacity: 0.95;
+    opacity: 1;
     color: rgba(222, 221, 223, 0.89);
     cursor: pointer;
     transition: 1300ms;
 }
 
 .nav-elements div:hover {
-    transition-duration: 600ms;
+    transition-duration: 300ms;
     transform: translateX(0em);
-    opacity: 0.55;
+    opacity: 0.7;
+    /* letter-spacing: 0.01em; */
     /* color: rgb(255, 253, 253); */
 }
 
@@ -191,6 +237,7 @@
     opacity: 1;
     /* transform: translateX(0.6vw); */
     transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1), ease;
+    pointer-events: none;
 }
 
 .flex {
